src/deployments/deployment-sql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-sqlapp2
  namespace: namesqlapp2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-sqlapp2
  template:
    metadata:
      labels:
        app: my-sqlapp2
    spec:
      nodeSelector:
        kubernetes.io/arch: "arm64"
      containers:
      - name: newsqlcontainer2
        image: ekhari/dockergitsql:latest
        ports:
        - containerPort: 3000
