src/deployments/service-sql.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlapp-service2 # we create this service and call this service since for ingress, we need a service
  namespace: namesqlapp2
spec:
  selector:
    app: my-sqlapp2  # This should match the label of your pods
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000  # The port your application is listening on
